Fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ footer .row {
 ul#menu-footer-nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-top: 15px;
 }
 
